gcc/testsuite/rust/rustc/ui/error-codes/E0458.rs
#[link(kind = "wonderful_unicorn")] extern {} // { dg-error ".E0459." "" { target *-*-* } }
// { dg-error "" "" { target *-*-* } .-2 }

fn main() {
}

